# hog-detector

./: .gitignore  404.html  Cargo.toml  README.md  bin-7bc10cb2e3dde078684eb58589a4690f057080e0dca774830e71235fb48499ed1063d137b3c8f663d3e050c9b87ee6bc.js  bin-7bc10cb2e3dde078684eb58589a4690f057080e0dca774830e71235fb48499ed1063d137b3c8f663d3e050c9b87ee6bc_bg.wasm  bin-9b1e56937e32e8bb4a2f7038cc16400e03cdf266413d0cc2a37335f23b0186bc1e41dabeaafae50553a32973eea32875.js  bin-9b1e56937e32e8bb4a2f7038cc16400e03cdf266413d0cc2a37335f23b0186bc1e41dabeaafae50553a32973eea32875_bg.wasm  bin-a8e6db8fde87e4106297ca7aa069e70cac9ec7d39a129dab1e529314c6cb4069c78822edb9d899c948694b68db557be4.js  bin-a8e6db8fde87e4106297ca7aa069e70cac9ec7d39a129dab1e529314c6cb4069c78822edb9d899c948694b68db557be4_bg.wasm  bin-ac334e0731f358081c7fda402f722af5d99725f6088490655539ea2ca4b6b6c186e5089cd3ee0629b448e08fd0aa97d3.js  bin-ac334e0731f358081c7fda402f722af5d99725f6088490655539ea2ca4b6b6c186e5089cd3ee0629b448e08fd0aa97d3_bg.wasm  bin-c7b00b1a4f6944e4f0a1baf9bb8dd72406981acfdadde78fa5d57c8c989573fbfc34446e1d5df42b800aa23e1bfadd40.js  bin-c7b00b1a4f6944e4f0a1baf9bb8dd72406981acfdadde78fa5d57c8c989573fbfc34446e1d5df42b800aa23e1bfadd40_bg.wasm  bin-f926fbda68644ed77736cbdcf77685c14a0b6c49a2c4794cddb2a1a292f1a73f9155e37be191b623ba454a523b9e5145.js  crates.js  help.html  index.css  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: bench.yml  docs.yml  gh-pages.yml
benches/: benchmark.rs
docs/: hog_detector.puml
examples/: dataset.rs  detect.rs  evaluate.rs  eye_dataset.rs  eyes.rs  hard_negative_samples.rs  mnist.rs  predict.rs  visualize_detections.rs  web.rs
hog_detector/: all.html  index.html  sidebar-items.js  trait.DataSet.html  trait.Detector.html  type.Annotation.html  type.Class.html
hog_detector/bbox/: index.html  sidebar-items.js  struct.BBox.html
hog_detector/classifier/: index.html  sidebar-items.js  struct.RandomForestClassifier.html  struct.SVMClassifier.html  trait.Classifier.html
hog_detector/classifier/bayes/: index.html  sidebar-items.js  struct.BayesClassifier.html
hog_detector/classifier/combined/: index.html  sidebar-items.js  struct.CombinedClassifier.html
hog_detector/classifier/randomforest/: index.html  sidebar-items.js  struct.RandomForestClassifier.html
hog_detector/classifier/svm/: index.html  sidebar-items.js  struct.SVMClassifier.html  type.SVCParametersType.html  type.SVCType.html
hog_detector/data_augmentation/: index.html  sidebar-items.js  trait.DataAugmentation.html
hog_detector/dataset/: index.html  sidebar-items.js  struct.EyesDataSet.html  struct.FolderDataSet.html  struct.MemoryDataSet.html  struct.MnistDataSet.html  trait.AnnotatedImageSet.html  trait.DataGenerator.html  trait.DataSet.html  type.AnnotatedImage.html
hog_detector/dataset/eyes_dataset/: struct.EyesDataSet.html
hog_detector/dataset/folder_dataset/: struct.FolderDataSet.html
hog_detector/dataset/memory_dataset/: struct.MemoryDataSet.html
hog_detector/detection/: fn.merge.html  fn.nms_sort.html  index.html  sidebar-items.js  struct.Detection.html
hog_detector/detection_filter/: index.html  sidebar-items.js  struct.TrackerFilter.html  trait.DetectionFilter.html
hog_detector/detector/: fn.detect_objects.html  fn.visualize_detections.html  index.html  sidebar-items.js  trait.Detector.html
hog_detector/feature_descriptor/: index.html  sidebar-items.js  struct.BriefFeatureDescriptor.html  struct.CombinedFeatureDescriptor.html  struct.HogFeatureDescriptor.html  trait.FeatureDescriptor.html
hog_detector/hogdetector/: index.html  sidebar-items.js  struct.HogDetector.html  trait.HogDetectorTrait.html
hog_detector/predictable/: index.html  sidebar-items.js  trait.Predictable.html
hog_detector/prelude/: index.html  sidebar-items.js  struct.AnnotatedImage.html  struct.Annotation.html  struct.BBox.html  struct.Detection.html  trait.Classifier.html  trait.DataSet.html  trait.Detector.html  trait.Predictable.html  trait.Trainable.html  type.Class.html
hog_detector/tests/: index.html  sidebar-items.js
hog_detector/trainable/: index.html  sidebar-items.js  trait.Trainable.html
hog_detector/utils/: fn.base64_image_to_image.html  fn.generate_random_subimages.html  fn.image_to_base64_image.html  fn.keypoint_windows.html  fn.pyramid.html  fn.rotated_frames.html  fn.scale_to_32.html  fn.scale_to_multiple_of_8.html  fn.scaled_frames.html  fn.sliding_window.html  fn.window_crop.html  index.html  sidebar-items.js
hog_detector/wasm/: fn.init_annotation_tool.html  fn.init_image_label_tool.html  fn.init_images.html  fn.init_trainer.html  index.html  sidebar-items.js
pkg/: README.md  hog_detector.d.ts  hog_detector.js  hog_detector_bg.wasm  hog_detector_bg.wasm.d.ts  package.json
res/: eyes_bayes_model.json  eyes_combined_model.json  eyes_model.json  eyes_random_forest_model.json  eyes_svm_burns_model.json  eyes_svm_model.json  object_labels.txt
res/training/: webcam01.txt  webcam05.txt  webcam06.txt  webcam10.txt
src/: bbox.rs  data_augmentation.rs  dataset.rs  detection.rs  detector.rs  folder_dataset.rs  hogdetector.rs  lib.rs  main.rs  model.rs  predictable.rs  trainable.rs  utils.rs  wasm.rs
src/classifier/: bayes.rs  combined.rs  mod.rs  randomforest.rs  svm.rs
src/dataset/: eye_dataset.rs  eyes_dataset.rs  folder_dataset.rs  memory_dataset.rs  mnist_dataset.rs  mod.rs
src/detection_filter/: mod.rs  tracker_filter.rs
src/feature_descriptor/: brief_feature_descriptor.rs  combined_feature_descriptor.rs  hog_feature_descriptor.rs  mod.rs
src/hog_detector/: bbox.rs.html  data_augmentation.rs.html  detection.rs.html  detector.rs.html  hogdetector.rs.html  lib.rs.html  predictable.rs.html  trainable.rs.html  utils.rs.html
src/tests/: mod.rs  test_image.rs
src/wasm/: annotated_images_js.rs  annotations_js.rs  display_image.rs  download.rs  hogdetector_js.rs  image_queue.rs  mod.rs  pipeline.rs  video_producer.rs
type.impl/std/: primitive.u32.js
(+204 files in other folders)
