[package]
name = "hog-detector"
version = "0.1.0"
edition = "2021"
description = "Histogram of Oriented Gradients and Object Detection"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rusty-rails/hog-detector"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.2.1"
float-ord = "0.3.2"
image = { version = "0.24.3", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
ndarray = "0.15.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.2.1", features = [
    "ndarray-bindings", "serde"
], default-features = false }
zip = { version = "0.6.2", default-features = false }


[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
web-sys = { version="0.3.59" }
yew = "0.19"
