[package]
name = "hog-detector"
version = "0.2.0"
edition = "2021"
description = "Histogram of Oriented Gradients and Object Detection"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/hog-detector"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["reqwest"]
mnist = ["dep:mnist"]
eyes = ["reqwest", "zip"]

[dependencies]
bytes = "1.2.1"
getrandom = { version = "0.2", features = ["js"] }
float-ord = "0.3.2"
image = { version = "0.24.3", default-features = false, features = [
  "png",
  "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
mnist = { version = "0.5.0", features = ["download"], optional = true }
ndarray = "0.15.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.3.0", features = [
  "ndarray-bindings",
  "serde",
], default-features = false }
zip = { version = "0.6.3", default-features = false, features = [
  "deflate",
], optional = true }

#[target.wasm32-unknown-unknown.dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.33"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.59", features = [
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "ImageData",
] }
js-sys = "0.3.55"
yew = "0.19"
#reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.4"
mockall = "0.11.3"

[[bench]]
name = "benchmark"
harness = false
