[package]
name = "hog-detector"
version = "0.6.0"
edition = "2021"
description = "Histogram of Oriented Gradients and Object Detection"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/hog-detector"
keywords = [
  "machine-learning",
  "object-detection",
  "hog",
  "svm",
  "bayes",
  "random-forest",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[features]
default = ["wasm", "svm"]
brief = ["dep:brief-rs"]
svm = ["svm-burns"]
mnist = ["dep:mnist"]
eyes = ["reqwest", "zip"]
wasm = [
  "reqwest",
  "console_error_panic_hook",
  "wasm-bindgen",
  "wasm-bindgen-test",
  "wasm-bindgen-futures",
  "web-sys",
  "js-sys",
  "yew",
]

[dependencies]
base64 = "0.21.5"
bincode = "1.3.3"
brief-rs = { git = "https://github.com/chriamue/brief-rs", optional = true }
bytes = "1.2.1"
getrandom = { version = "0.2", features = ["js"] }
float-ord = "0.3.2"
image = { version = "0.24.3", default-features = false, features = [
  "png",
  "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
image-label-tool = { git = "https://github.com/chriamue/image-label-tool", version = "0.1.2" }
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
linfa = "0.7.0"
log = "0.4.20"
mnist = { version = "0.5.0", features = ["download"], optional = true }
ndarray = "0.15.6"
num-traits = "0.2.15"
object-detector-rust = { version = "0.1.3", git = "https://github.com/chriamue/object-detector-rust" }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.3.0", features = [
  "ndarray-bindings",
  "serde",
], default-features = false, git = "https://github.com/smartcorelib/smartcore", branch = "fix-245" }
svm-burns = { git = "https://github.com/chriamue/svm-burns", optional = true}
zip = { version = "0.6.6", default-features = false, features = [
  "deflate",
], optional = true }

#[target.wasm32-unknown-unknown.dependencies]
console_log = "1.0.0"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }
wasm-bindgen-test = { version = "0.3.33", optional = true }
wasm-bindgen-futures = { version = "0.4.30", optional = true }
web-sys = { version = "0.3.59", features = [
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "ImageData",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Performance",
], optional = true }
js-sys = { version = "0.3.55", optional = true }
yew = { version = "0.21.0", features = ["csr", "ssr"], optional = true }

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "benchmark"
harness = false
